# HaySteamerTemperatureControl

./: .gitignore  BlockDiagramOverview.drawio  Connect_Wlan.h  DiagramDataSet.cpp  DiagramDataSet.h  Display.h  DisplayWriter.cpp  DisplayWriter.h  FaultConditions.h  HaySteamerCircuitDiagram.drawio  HaySteamerLogic.h  HaySteamerTemperatureControl.ino  Keypad.h  KeypadReader.h  LEDWriter.h  LICENSE  NPTClock.h  OrganigramOverview.drawio  Parameter.h  ParameterEditor.cpp  ParameterEditor.h  PushButton.h  README.md  Relay.h  Services.h  SignalLED.h  StartConditions.h  StateMachine.h  TaskScheduler.h  TempProbe.h  TempReader.h  TimeReader.h  Unbenanntes Diagramm.drawio
.github/workflows/: build.yml
Arduino/HaySteamerTemperatureControl/: DisplayWriter.h  HaySteamerLogic.h  HaySteamerTemperatureControl.ino  KeypadReader.h  ParameterEditor.cpp  RelayWriter.h  StateMachine.h
Arduino/HaySteamerTemperatureControl/Sandbox/: Actor.h  CyclicModule.h
Arduino/HaySteamerTemperatureControl/Sandbox/SandboxTests/: Test_FaultConditions.cpp  Test_ManualEditor.cpp  Test_OutputTask.cpp
Arduino/libraries/0_1_Sensor/: keywords.txt
Arduino/libraries/0_2_Status/: Status.h
Arduino/libraries/0_3_CyclicModule/: CyclicModule.h  keywords.txt
Arduino/libraries/0_4_Actor/: Actor.h  keywords.txt
Arduino/libraries/1_1_Communication/: Communication.h  Connect_Wlan.cpp
Arduino/libraries/1_1_Communication/examples/NTPClock/: NTPClock.ino
Arduino/libraries/1_2_PushButton/: PushButton.h
Arduino/libraries/1_2_PushButton/examples/PushButtonInterrupt/: PushButtonInterrupt.ino
Arduino/libraries/1_3_KeyPadInterrupt/examples/KeyPadInterrupt/: KeyPadInterrupt.ino
Arduino/libraries/1_4_TempSensor/examples/MinTemp/: MinTemp.ino
Arduino/libraries/2_1_Display/: Display.h
Arduino/libraries/2_2_Relay/: Relay.h
Arduino/libraries/2_2_Relay/examples/RelaySwitch/: RelaySwitch.ino
Arduino/libraries/2_3_StatusLED/: StatusLED.cpp
Documentation/: Unbenanntes Diagramm.drawio
HaySteamerTemperatureControl/: .gitignore  DisplayWriter.h  FaultConditions.h  HaySteamerLogic.h  LEDWriter.h  Libraries.drawio  StateMachine.h  TempReader.h  TimeReader.cpp  TimeReader.h
HaySteamerTemperatureControl/Documentation/: HaySteamerCircuitDiagram.drawio
HaySteamerTemperatureControl/Sandbox/: CMakeLists.txt  Sensor.h  millis.h
HaySteamerTemperatureControl/Sandbox/SandboxTests/: Test_CyclicTask.cpp  Test_DisplayFormatter.cpp  Test_DisplayWriter.cpp  Test_KeypadReader.cpp
Sandbox/: Actor.h  CMakeLists.txt  Drawer.h  Sensor.h  Status.h  StringConversion.h  TimeLib.h  millis.h
Sandbox/SandboxTests/: SandboxTests.vcxproj  SandboxTests.vcxproj.filters  Test_CyclicCaller.cpp  Test_DisplayFormatter.cpp  Test_DisplayWriter.cpp  Test_FastInputTask.cpp  Test_FaultConditions.cpp  Test_HaySteamerLogic.cpp  Test_KeypadReader.cpp  Test_ManualEditor.cpp  Test_ParameterEditor.cpp  Test_StartConditions.cpp  Test_StateMachine.cpp  Test_TempReader.cpp  Test_TimeLib.cpp  Test_TimeReader.cpp
libraries/0_1_Sensor/: Sensor.h
libraries/0_2_Status/: keywords.txt
libraries/1_1_Communication/: Communication.cpp  Connect_Wlan.h  NTPClock.h  arduino_secrets.h
libraries/1_3_KeyPadInterrupt/: Keypad.h
libraries/1_4_TempSensor/: TempProbe.h
libraries/2_1_Display/: Display.h
libraries/2_1_Display/examples/DisplayTest/: DisplayTest.ino
libraries/2_2_Relay/: keywords.txt
libraries/2_3_StatusLED/: StatusLED.h  keywords.txt
libraries/2_3_StatusLED/examples/StatusLEDColors/: StatusLEDColors.ino
